WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268093
Fix html/browsers/browsing-the-web/navigating-across-documents/child-navigates-parent-cross-origin.window.html wpt test with site isolation on
https://bugs.webkit.org/show_bug.cgi?id=268093
Summary
Fix html/browsers/browsing-the-web/navigating-across-documents/child-navigate...
Alex Christensen
Reported
2024-01-25 10:40:27 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-25 10:40:50 PST
<
rdar://problem/121608952
>
Alex Christensen
Comment 2
2024-01-25 10:50:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23247
EWS
Comment 3
2024-01-25 12:42:39 PST
Committed
273530@main
(6a9b49bfd3e6): <
https://commits.webkit.org/273530@main
> Reviewed commits have been landed. Closing PR #23247 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug